2018-01-24  Wenson Hsieh  <wenson_hsieh@apple.com>

        Unreviewed, try to fix the Windows build after r227479.

        Tweak some Windows WebKitLegacy code to use updated HTMLFormElement methods.

        * WebFrame.cpp:
        (WebFrame::elementWithName):
        (WebFrame::controlsInForm):

2018-01-19  Per Arne Vollan  <pvollan@apple.com>

        [Win] Compile error: 'WebKitQuartzCoreAdditionsBase.h' not found.
        https://bugs.webkit.org/show_bug.cgi?id=181859
        <rdar://problem/36659886>

        Reviewed by Alex Christensen.
        
        Use local include patch.

        * WebKitQuartzCoreAdditions/API/WKCACFImage.h:
        * WebKitQuartzCoreAdditions/API/WKCACFView.h:
        * WebKitQuartzCoreAdditions/API/WKCACFViewPrivate.h:

2018-01-17  Youenn Fablet  <youenn@apple.com>

        Put fetch Request.keepalive behind a runtime flag
        https://bugs.webkit.org/show_bug.cgi?id=181592

        Reviewed by Chris Dumez.

        * WebPreferences.cpp:
        (WebPreferences::fetchAPIKeepAliveEnabled):
        (WebPreferences::setFetchAPIKeepAliveEnabled):
        * WebPreferences.h:
        * WebView.cpp:
        (WebView::notifyPreferencesChanged):

2018-01-17  Wenson Hsieh  <wenson_hsieh@apple.com>

        Add injected bundle SPI to replace subresource URLs when dropping or pasting rich content
        https://bugs.webkit.org/show_bug.cgi?id=181637
        <rdar://problem/36508471>

        Reviewed by Tim Horton.

        Add a stub implementation of replacementURLForResource. See WebCore and WebKit ChangeLogs for more detail.

        * WebCoreSupport/WebEditorClient.cpp:
        (WebEditorClient::replacementURLForResource):
        * WebCoreSupport/WebEditorClient.h:

2017-12-28  Yusuke Suzuki  <utatane.tea@gmail.com>

        Remove std::chrono completely
        https://bugs.webkit.org/show_bug.cgi?id=181186

        Reviewed by Alex Christensen.

        * Plugins/PluginStream.cpp:
        (WebCore::lastModifiedDateMS):
